# ferrox

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  build.rs  config.schema.json  docker-compose.yml
.claude/: README.md
.claude/agents/: architecture-guardian.md  documentation-reviewer.md  security-reviewer.md
.github/workflows/: ci.yml  release.yml
config/: config.yaml
docs/developer/: architecture.md  deployment.md  development.md
docs/user/: api-reference.md  configuration.md  observability.md  providers.md  quickstart.md  virtual-keys.md
ferrox/: Cargo.toml  config.schema.json
ferrox-cp/: Cargo.toml  Dockerfile  Dockerfile.release
ferrox-cp/migrations/: 20240001000000_initial_schema.sql  20240002000000_usage_log.sql  20240003000000_client_budgets.sql
ferrox-cp/src/: budget.rs  config.rs  error.rs  main.rs  state.rs  ui.rs
ferrox-cp/src/crypto/: encrypt.rs  jwks.rs  jwt.rs  keys.rs  mod.rs
ferrox-cp/src/db/: audit_repo.rs  client_repo.rs  error.rs  mod.rs  models.rs  signing_key_repo.rs  usage_repo.rs
ferrox-cp/src/handlers/: health.rs  jwks.rs  mod.rs  token.rs
ferrox-cp/src/handlers/admin/: audit.rs  clients.rs  mod.rs  signing_keys.rs
ferrox-cp/src/middleware/: admin_auth.rs
ferrox-cp/ui/: index.html  package-lock.json  package.json  vite.config.ts
ferrox-cp/ui/src/: App.tsx  api.ts  main.tsx
ferrox-cp/ui/src/components/: Layout.tsx
ferrox-cp/ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Label.tsx
ferrox-cp/ui/src/pages/: AuditLog.tsx  ClientDetail.tsx  Clients.tsx  Dashboard.tsx  Login.tsx  SigningKeys.tsx
ferrox/config/: config.yaml  config_minimal.yaml
ferrox/src/: anthropic_types.rs  auth.rs  budget_enforcer.rs  config.rs  error.rs  event_dispatcher.rs  main.rs  metrics.rs  retry.rs  router.rs  server.rs  state.rs  types.rs  usage_writer.rs
ferrox/src/handlers/: anthropic_messages.rs  anthropic_models.rs  chat.rs  health.rs  mod.rs  models.rs
ferrox/src/lb/: circuit_breaker.rs  mod.rs  strategy.rs
ferrox/src/providers/: anthropic.rs  anthropic_events.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs
ferrox/src/ratelimit/: backend.rs  memory.rs  token_bucket.rs
ferrox/src/telemetry/: metrics.rs  mod.rs  otel.rs
src/: auth.rs  config.rs  jwks.rs  main.rs  router.rs  state.rs
src/ratelimit/: mod.rs  redis_backend.rs
