[package]
name = "ferrox"
version = "0.1.0"
edition = "2021"
description = "High-performance stateless LLM API gateway"
repository = "https://github.com/shaharia-lab/ferrox"
license = "MIT"

[[bin]]
name = "ferrox"
path = "src/main.rs"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "timeout", "compression-gzip"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
pin-project-lite = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging + tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.23"

# Prometheus
prometheus = { version = "0.14", features = ["process"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
dotenvy = "0.15"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }

# AWS Bedrock
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
await_holding_lock = "warn"
dbg_macro = "warn"
exit = "warn"
filter_map_next = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
needless_continue = "warn"
option_option = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
undocumented_unsafe_blocks = "warn"
unused_self = "warn"
verbose_file_reads = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
