[package]
name = "ferrox-cp"
version = "0.1.0"
edition = "2021"
description = "Ferrox control plane — key management, tenant administration, JWT signing"
repository = "https://github.com/shaharia-lab/ferrox"
license = "MIT"

[[bin]]
name = "ferrox-cp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
