[package]
name = "ferrox-cp"
version = "0.1.0"
edition = "2021"
description = "Ferrox control plane — key management, tenant administration, JWT signing"
repository = "https://github.com/shaharia-lab/ferrox"
license = "MIT"

[[bin]]
name = "ferrox-cp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
# Crypto
rsa = { version = "0.9", features = ["sha2", "pem"] }
aes-gcm = "0.10"
rand = "0.8"
# JWT signing
jsonwebtoken = "9"
# Hex decoding for CP_ENCRYPTION_KEY
hex = "0.4"
# Constant-time comparisons to prevent timing side-channels
subtle = "2"
# Base64url for JWKS JWK encoding
base64 = "0.22"
# HTTP server
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
# bcrypt for API key verification
bcrypt = "0.15"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Embed static UI assets into the binary at compile time
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
axum-test = "15"
